--- a/silicon-design/src/styles/styles.css
+++ b/silicon-design/src/styles/styles.css
@@ -834,6 +834,7 @@ main #faq-section .faq-questions-container {
 }
 main #faq-section .faq-questions-container .faq-question {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   padding: 1.5rem;
@@ -856,6 +857,7 @@ main #faq-section .faq-questions-container .faq-question .faq-chevron {
   width: 36px;
   height: 36px;
   font-size: 1.5em;
+  color: #33354d;
   background-color: #2196f3;
   display: flex;
   align-items: center;
@@ -867,6 +869,7 @@ main #faq-section .faq-questions-container .faq-question .faq-chevron {
   width: 36px;
   height: 36px;
   font-size: 1.5em;
+  color: #33354d;
   width: 42px;
   display: flex;
   align-items: center;
@@ -878,6 +881,7 @@ main #faq-section .faq-questions-container .faq-question .faq-chevron {
   width: 36px;
   height: 36px;
   font-size: 1.5em;
+  color: #33354d;
   height: 42px;
   display: flex;
   align-items: center;
@@ -889,6 +893,7 @@ main #faq-section .faq-questions-container .faq-question .faq-chevron {
   width: 36px;
   height: 36px;
   font-size: 1.5em;
+  color: #33354d;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -900,6 +905,7 @@ main #faq-section .faq-questions-container .faq-question .faq-chevron {
   width: 36px;
   height: 36px;
   font-size: 1.5em;
+  color: #33354d;
   border: none;
   display: flex;
   align-items: center;
@@ -911,6 +917,7 @@ main #faq-section .faq-questions-container .faq-question .faq-chevron {
   width: 36px;
   height: 36px;
   font-size: 1.5em;
+  color: #33354d;
   font-size: 2em;
   display: flex;
   align-items: center;
@@ -922,6 +929,7 @@ main #faq-section .faq-questions-container .faq-question .faq-chevron {
   width: 36px;
   height: 36px;
   font-size: 1.5em;
+  color: #33354d;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   display: flex;
   align-items: center;
@@ -933,6 +941,7 @@ main #faq-section .faq-questions-container .faq-question .faq-chevron {
   width: 36px;
   height: 36px;
   font-size: 1.5em;
+  color: #33354d;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -944,31 +953,24 @@ main #faq-section .faq-questions-container .faq-question .faq-chevron {
   width: 36px;
   height: 36px;
   font-size: 1.5em;
+  color: #33354d;
 }
-main #faq-section .faq-question-expanded {
+main #faq-section .faq-question-title-container {
   display: flex;
   justify-content: space-between;
-  flex-direction: column;
-  gap: 1rem;
-  padding: 1.5rem;
-  border-radius: 8px;
-  box-shadow: 0px 4.4px 12px -1px rgba(19, 16, 34, 0.06), 0px 2px 6.4px -1px rgba(19, 16, 34, 0.03);
+  width: 100%;
 }
-main #faq-section .faq-question-expanded .faq-question-title-container {
-  display: flex;
-  justify-content: space-between;
-}
-main #faq-section .faq-question-expanded .faq-question-title-container .faq-question-title {
+main #faq-section .faq-question-title-container .faq-question-title {
   color: #33354d;
   line-height: 160%;
 }
-main #faq-section .faq-question-expanded .faq-answer {
+main #faq-section .faq-answer {
   line-height: 160%;
   color: #565973;
   font-size: 0.875rem;
   font-weight: 400;
 }
-main #faq-section .faq-question-expanded .faq-chevron {
+main #faq-section .faq-chevron {
   font-family: "Material Icons";
   display: flex;
   align-items: center;
@@ -1229,23 +1231,18 @@ body.dark-theme main #faq-section .faq-questions-container .faq-question .faq-ch
   color: white;
   background-color: rgba(255, 255, 255, 0.04);
 }
-body.dark-theme main #faq-section .faq-question-expanded {
-  background-color: rgba(255, 255, 255, 0.04);
-  border: 1px solid rgba(255, 255, 255, 0.15);
-}
-body.dark-theme main #faq-section .faq-question-expanded .faq-question-title-container {
+body.dark-theme main #faq-section .faq-question-title-container {
   display: flex;
   justify-content: space-between;
 }
-body.dark-theme main #faq-section .faq-question-expanded .faq-question-title-container .faq-question-title {
+body.dark-theme main #faq-section .faq-question-title-container .faq-question-title {
   color: white;
 }
-body.dark-theme main #faq-section .faq-question-expanded .faq-answer {
+body.dark-theme main #faq-section .faq-answer {
   color: rgba(255, 255, 255, 0.7);
 }
-body.dark-theme main #faq-section .faq-question-expanded .faq-chevron {
+body.dark-theme main #faq-section .faq-chevron {
   color: white;
-  filter: drop-shadow(-1px 1px 3px rgba(99, 102, 241, 0.9));
 }
 body.dark-theme main #subscribe {
   background-color: rgba(255, 255, 255, 0.04);
@@ -1507,23 +1504,24 @@ body.dark-theme footer p {
     align-items: center;
     margin-bottom: 2rem;
   }
-  main #faq-section .faq-questions-container-tablet {
+  main #faq-section .faq-questions-container {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
   }
-  main #faq-section .faq-questions-container-tablet .contact-image-box-tablet {
+  main #faq-section .faq-questions-container .contact-image-box-tablet {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 16px;
   }
-  main #faq-section .faq-questions-container-tablet .contact-image-box-tablet img {
+  main #faq-section .faq-questions-container .contact-image-box-tablet img {
     max-width: 60%;
     height: auto;
     min-width: 20%;
   }
-  main #faq-section .faq-questions-container-tablet .faq-question-tablet {
+  main #faq-section .faq-questions-container .faq-question {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -1531,13 +1529,13 @@ body.dark-theme footer p {
     border-radius: 8px;
     box-shadow: 0px 4.4px 12px -1px rgba(19, 16, 34, 0.06), 0px 2px 6.4px -1px rgba(19, 16, 34, 0.03);
   }
-  main #faq-section .faq-questions-container-tablet .faq-question-tablet .faq-question-title-tablet {
+  main #faq-section .faq-questions-container .faq-question .faq-question-title {
     line-height: 160%;
     color: #33354d;
     font-size: 16px;
     font-weight: 600;
   }
-  main #faq-section .faq-questions-container-tablet .faq-question-tablet .faq-chevron-tablet {
+  main #faq-section .faq-questions-container .faq-question .faq-chevron {
     font-family: "Material Icons";
     display: flex;
     align-items: center;
@@ -1638,131 +1636,15 @@ body.dark-theme footer p {
     height: 36px;
     font-size: 1.5em;
   }
-  main #faq-section .faq-questions-container-tablet .faq-question-expanded-tablet {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 1.5rem;
-    border-radius: 8px;
-    box-shadow: 0px 4.4px 12px -1px rgba(19, 16, 34, 0.06), 0px 2px 6.4px -1px rgba(19, 16, 34, 0.03);
-  }
-  main #faq-section .faq-questions-container-tablet .faq-question-expanded-tablet .faq-question-title-container-tablet {
+  main #faq-section .faq-questions-container .faq-question-title-container {
     display: flex;
     justify-content: space-between;
   }
-  main #faq-section .faq-questions-container-tablet .faq-question-expanded-tablet .faq-question-title-container-tablet .faq-question-title-tablet {
-    line-height: 160%;
-    color: #33354d;
-    font-size: 16px;
-    font-weight: 600;
-  }
-  main #faq-section .faq-questions-container-tablet .faq-question-expanded-tablet .faq-answer-tablet {
+  main #faq-section .faq-questions-container .faq-answer {
     line-height: 160%;
     color: #565973;
     font-size: 0.875rem;
     font-weight: 400;
-  }
-  main #faq-section .faq-questions-container-tablet .faq-question-expanded-tablet .faq-chevron-tablet {
-    font-family: "Material Icons";
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #6366f1;
-    transform: rotate(270deg);
-    flex-shrink: 0;
-    width: 36px;
-    height: 36px;
-    font-size: 1.5em;
-    color: white;
-    background-color: #2196f3;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #6366f1;
-    transform: rotate(270deg);
-    flex-shrink: 0;
-    width: 36px;
-    height: 36px;
-    font-size: 1.5em;
-    color: white;
-    width: 42px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #6366f1;
-    transform: rotate(270deg);
-    flex-shrink: 0;
-    width: 36px;
-    height: 36px;
-    font-size: 1.5em;
-    color: white;
-    height: 42px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #6366f1;
-    transform: rotate(270deg);
-    flex-shrink: 0;
-    width: 36px;
-    height: 36px;
-    font-size: 1.5em;
-    color: white;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #6366f1;
-    transform: rotate(270deg);
-    flex-shrink: 0;
-    width: 36px;
-    height: 36px;
-    font-size: 1.5em;
-    color: white;
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #6366f1;
-    transform: rotate(270deg);
-    flex-shrink: 0;
-    width: 36px;
-    height: 36px;
-    font-size: 1.5em;
-    color: white;
-    font-size: 2em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #6366f1;
-    transform: rotate(270deg);
-    flex-shrink: 0;
-    width: 36px;
-    height: 36px;
-    font-size: 1.5em;
-    color: white;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #6366f1;
-    transform: rotate(270deg);
-    flex-shrink: 0;
-    width: 36px;
-    height: 36px;
-    font-size: 1.5em;
-    color: white;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #6366f1;
-    transform: rotate(270deg);
-    flex-shrink: 0;
-    width: 36px;
-    height: 36px;
-    font-size: 1.5em;
-    color: white;
   }
   main #subscribe {
     width: 95%;
@@ -1876,7 +1758,7 @@ body.dark-theme footer p {
     color: #9397ad;
   }
 }
-@media (max-width: 768px) and (max-width: 480px) {
+@media (max-width: 480px) {
   .content-wrapper-nav {
     padding: 1.875rem 1rem;
     height: 3.25rem;
@@ -2117,27 +1999,42 @@ body.dark-theme footer p {
     align-items: center;
     margin-bottom: 2rem;
   }
-  main #faq-section .faq-questions-container-mobile {
+  main #faq-section .faq-questions-container {
     display: flex;
     flex-direction: column;
     border: 1px solid #e2e5f1;
     border-radius: 8px;
+    width: 100%;
+    gap: 0;
   }
-  main #faq-section .faq-question-mobile {
+  main #faq-section .faq-questions-container .faq-question {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1.5rem;
-    border-radius: 8px;
+    border-radius: 0;
     box-shadow: none;
+    border: 1px solid #e2e5f1;
   }
-  main #faq-section .faq-question-mobile .faq-question-title-mobile {
+  main #faq-section .faq-questions-container .faq-question .faq-question-title {
     line-height: 130%;
     color: #33354d;
     font-size: 16px;
     font-weight: 600;
   }
-  main #faq-section .faq-chevron-mobile {
+  main #faq-section .faq-questions-container .faq-question:first-child {
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+  main #faq-section .faq-questions-container .faq-question:last-child {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+  }
+  main #faq-section .faq-questions-container .faq-chevron {
     font-family: "Material Icons";
     display: flex;
     align-items: center;
@@ -2238,127 +2135,7 @@ body.dark-theme footer p {
     height: 36px;
     font-size: 24px;
   }
-  main #faq-section .faq-question-expanded-mobile {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 1.5rem;
-    border-radius: 8px;
-    box-shadow: none;
-  }
-  main #faq-section .faq-question-expanded-mobile .faq-question-title-container-mobile {
-    display: flex;
-    justify-content: space-between;
-  }
-  main #faq-section .faq-question-expanded-mobile .faq-question-title-container-mobile .faq-question-title-mobile {
-    line-height: 130%;
-    color: #33354d;
-    font-size: 16px;
-    font-weight: 600;
-  }
-  main #faq-section .faq-question-expanded-mobile .faq-chevron-mobile {
-    font-family: "Material Icons";
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #6366f1;
-    transform: rotate(270deg);
-    flex-shrink: 0;
-    width: 36px;
-    height: 36px;
-    font-size: 1.5em;
-    color: white;
-    background-color: #2196f3;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #6366f1;
-    transform: rotate(270deg);
-    flex-shrink: 0;
-    width: 36px;
-    height: 36px;
-    font-size: 1.5em;
-    color: white;
-    width: 42px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #6366f1;
-    transform: rotate(270deg);
-    flex-shrink: 0;
-    width: 36px;
-    height: 36px;
-    font-size: 1.5em;
-    color: white;
-    height: 42px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #6366f1;
-    transform: rotate(270deg);
-    flex-shrink: 0;
-    width: 36px;
-    height: 36px;
-    font-size: 1.5em;
-    color: white;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #6366f1;
-    transform: rotate(270deg);
-    flex-shrink: 0;
-    width: 36px;
-    height: 36px;
-    font-size: 1.5em;
-    color: white;
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #6366f1;
-    transform: rotate(270deg);
-    flex-shrink: 0;
-    width: 36px;
-    height: 36px;
-    font-size: 1.5em;
-    color: white;
-    font-size: 2em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #6366f1;
-    transform: rotate(270deg);
-    flex-shrink: 0;
-    width: 36px;
-    height: 36px;
-    font-size: 1.5em;
-    color: white;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #6366f1;
-    transform: rotate(270deg);
-    flex-shrink: 0;
-    width: 36px;
-    height: 36px;
-    font-size: 1.5em;
-    color: white;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #6366f1;
-    transform: rotate(270deg);
-    flex-shrink: 0;
-    width: 36px;
-    height: 36px;
-    font-size: 1.5em;
-    color: white;
-  }
-  main #faq-section .faq-answer-mobile {
+  main #faq-section .faq-questions-container .faq-answer {
     line-height: 160%;
     color: #565973;
     font-size: 0.875rem;
@@ -2454,43 +2231,38 @@ body.dark-theme footer p {
   body.dark-theme main #how-it-works {
     background-color: rgba(255, 255, 255, 0.07);
   }
-  body.dark-theme main #faq-section .faq-title-mobile {
+  body.dark-theme main #faq-section .faq-title {
     color: white;
   }
-  body.dark-theme main #faq-section .faq-questions-container-mobile {
+  body.dark-theme main #faq-section .faq-questions-container {
     border: 1px solid rgba(255, 255, 255, 0.15);
   }
-  body.dark-theme main #faq-section .faq-questions-container-mobile .faq-question-mobile {
+  body.dark-theme main #faq-section .faq-questions-container .faq-question {
     background-color: #131022;
-  }
-  body.dark-theme main #faq-section .faq-questions-container-mobile .faq-question-mobile .faq-question-title-mobile {
+    border-radius: 0;
     color: white;
   }
-  body.dark-theme main #faq-section .faq-questions-container-mobile .faq-question-mobile .faq-chevron-mobile {
+  body.dark-theme main #faq-section .faq-questions-container .faq-question .faq-chevron {
     color: white;
     background-color: rgba(255, 255, 255, 0.04);
   }
-  body.dark-theme main #faq-section .faq-questions-container-mobile hr {
+  body.dark-theme main #faq-section .faq-questions-container .faq-question:first-child {
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+  body.dark-theme main #faq-section .faq-questions-container .faq-question:last-child {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+  }
+  body.dark-theme main #faq-section .faq-questions-container hr {
     background-color: rgba(255, 255, 255, 0.15);
   }
-  body.dark-theme main #faq-section .faq-question-expanded-mobile {
-    background-color: #131022;
-    border: 1px solid rgba(255, 255, 255, 0.15);
-    border-radius: 8px 8px 0px 0px;
-  }
-  body.dark-theme main #faq-section .faq-question-expanded-mobile .faq-question-title-container-mobile {
-    display: flex;
-    justify-content: space-between;
-  }
-  body.dark-theme main #faq-section .faq-question-expanded-mobile .faq-question-title-container-mobile .faq-question-title-mobile {
-    color: white;
-  }
-  body.dark-theme main #faq-section .faq-question-expanded-mobile .faq-answer-mobile {
+  body.dark-theme main #faq-section .faq-answer {
     color: rgba(255, 255, 255, 0.7);
-  }
-  body.dark-theme main #faq-section .faq-question-expanded-mobile .faq-chevron-mobile {
-    color: white;
-    filter: drop-shadow(-1px 1px 3px rgba(99, 102, 241, 0.9));
   }
   footer {
     padding: 1.625rem 0;
