accordion is now fully dynamic

--- a/silicon-design/src/styles/styles.css
+++ b/silicon-design/src/styles/styles.css
@@ -823,6 +823,7 @@ main #faq-section .faq-contact-container .contact-image-box img {
   max-width: 60%;
   height: auto;
   min-width: 20%;
+  cursor: pointer;
 }
 main #faq-section .faq-questions-container {
   flex-grow: 1;
@@ -839,6 +840,7 @@ main #faq-section .faq-questions-container .faq-question {
   align-items: center;
   padding: 1.5rem;
   border-radius: 8px;
+  cursor: pointer;
   box-shadow: 0px 4.4px 12px -1px rgba(19, 16, 34, 0.06), 0px 2px 6.4px -1px rgba(19, 16, 34, 0.03);
 }
 main #faq-section .faq-questions-container .faq-question .faq-question-title {
@@ -955,6 +957,14 @@ main #faq-section .faq-questions-container .faq-question .faq-chevron {
   font-size: 1.5em;
   color: #33354d;
 }
+main #faq-section .faq-questions-container .faq-question.expanded .faq-chevron {
+  background-color: #6366f1;
+  color: white;
+  transform: rotate(270deg);
+}
+main #faq-section .faq-questions-container .faq-question.expanded .faq-answer {
+  display: block;
+}
 main #faq-section .faq-question-title-container {
   display: flex;
   justify-content: space-between;
@@ -965,6 +975,7 @@ main #faq-section .faq-question-title-container .faq-question-title {
   line-height: 160%;
 }
 main #faq-section .faq-answer {
+  display: none;
   line-height: 160%;
   color: #565973;
   font-size: 0.875rem;
@@ -1214,11 +1225,9 @@ body.dark-theme main #faq-section .faq-subtitle {
 }
 body.dark-theme main #faq-section .faq-contact-container .contact-image-box .icon-box {
   content: url(images/icon-box-dark.svg);
-  cursor: pointer;
 }
 body.dark-theme main #faq-section .faq-contact-container .icon-box-2 {
   content: url(images/icon-box-2-dark.svg);
-  cursor: pointer;
 }
 body.dark-theme main #faq-section .faq-questions-container .faq-question {
   background-color: rgba(255, 255, 255, 0.04);
@@ -1226,6 +1235,13 @@ body.dark-theme main #faq-section .faq-questions-container .faq-question {
 }
 body.dark-theme main #faq-section .faq-questions-container .faq-question .faq-question-title {
   color: white;
+}
+body.dark-theme main #faq-section .faq-questions-container .faq-question.expanded .faq-chevron {
+  background-color: #6366f1;
+  transform: rotate(270deg);
+}
+body.dark-theme main #faq-section .faq-questions-container .faq-question.expanded .faq-answer {
+  display: block;
 }
 body.dark-theme main #faq-section .faq-questions-container .faq-question .faq-chevron {
   color: white;
@@ -1271,22 +1287,19 @@ footer {
   justify-content: center;
   align-items: center;
   padding: 3.375rem 0;
+  gap: 0.1875rem;
 }
 footer p {
-  color: #9397ad;
+  color: #9397ad !important;
   line-height: 160%;
   color: #565973;
   font-size: 0.875rem;
   font-weight: 400;
 }
-footer .footer-container {
-  display: flex;
-  gap: 0.1875rem;
-}
 
 body.dark-theme footer p {
-  color: white;
-  opacity: 0.5;
+  color: white !important;
+  opacity: 0.5 !important;
 }
 
 @media (max-width: 768px) {
@@ -1641,6 +1654,7 @@ body.dark-theme footer p {
     justify-content: space-between;
   }
   main #faq-section .faq-questions-container .faq-answer {
+    margin-top: 1rem;
     line-height: 160%;
     color: #565973;
     font-size: 0.875rem;
@@ -1711,24 +1725,6 @@ body.dark-theme footer p {
   body.dark-theme main #faq-section .faq-questions-container-tablet .faq-question-tablet .faq-chevron-tablet {
     color: white;
     background-color: rgba(255, 255, 255, 0.04);
-  }
-  body.dark-theme main #faq-section .faq-question-expanded-tablet {
-    background-color: rgba(255, 255, 255, 0.04);
-    border: 1px solid rgba(255, 255, 255, 0.15);
-  }
-  body.dark-theme main #faq-section .faq-question-expanded-tablet .faq-question-title-container-tablet {
-    display: flex;
-    justify-content: space-between;
-  }
-  body.dark-theme main #faq-section .faq-question-expanded-tablet .faq-question-title-container-tablet .faq-question-title-tablet {
-    color: white;
-  }
-  body.dark-theme main #faq-section .faq-question-expanded-tablet .faq-answer-tablet {
-    color: rgba(255, 255, 255, 0.7);
-  }
-  body.dark-theme main #faq-section .faq-question-expanded-tablet .faq-chevron-tablet {
-    color: white;
-    filter: drop-shadow(-1px 1px 3px rgba(99, 102, 241, 0.9));
   }
   body.dark-theme main #subscribe {
     background-color: rgba(255, 255, 255, 0.04);
@@ -2265,13 +2261,11 @@ body.dark-theme footer p {
     color: rgba(255, 255, 255, 0.7);
   }
   footer {
-    padding: 1.625rem 0;
-  }
-  footer .footer-container {
+    padding: 1.625rem 1.1875rem;
     align-items: center;
     flex-direction: column;
   }
-  footer .footer-container p {
+  footer p {
     line-height: 160%;
   }
 }/*# sourceMappingURL=styles.css.map */
